<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">M-Zito HQ</string>
    <string name="loginbtn">LOGIN</string>
    <string name="registerbtn">REGISTER</string>

    <!--for the register and login-->
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter Your Full Name</string>
    <string name="err_msg_email">Enter a Valid Email Address</string>
    <string name="err_msg_password">Enter The Password</string>
    <string name="login_enter_your_name">Enter Your Username or Email</string>
    <string name="login_enter_your_password">Enter Your Password</string>
    <string name="login_btn">LOGIN</string>
    <string name="not_yet_registered">Already Registered?</string>
    <string name="already_signed">Not Yet Registered?</string>

    <!--CardView-->
    <string name="backdrop_subtitle">UserName</string>
    <string name="title_activity_landing_page">HomeGym</string>
    <!--User Profile-->
    <string name="users_profile_pic">Users Profile Pic</string>
    <string name="btn_user_save_details">SAVE DETAILS</string>
    <string name="user_home_address">Home Address</string>
    <string name="user_age">Age</string>
    <string name="user_first_name">First Name</string>
    <string name="user_last_name">Last Name</string>
    <string name="user_mass">Weight</string>
    <string name="menu_workouts">Workouts</string>
    <string name="menu_goals">Goals</string>
    <string name="record_session">Record Session</string>
    <string name="gym_locations">Gym Locations</string>
    <string name="gym_instructors">Gym Instructors</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="past_workouts">Past Workouts</string>
    <!--Basic Info-->
    <string name="female_gender">Female</string>
    <string name="male_gender" translatable="false">Male</string>
    <!--Dreams-->
    <string name="goal_weight">Weight Goals</string>
    <string name="current_weight">Current Weight</string>

    <!--Wokouts-->
    <string name="workout_add_statement">Add</string>
    <string name="workout_diet_statement">Diet Plan</string>
    <string name="workout_past_statement">Past Workouts</string>
    <string name="workout_record_statement">Record Session</string>
    <string name="landing_record_session">Record Session</string>
    <string name="landing_gym_location">Gym Location</string>
    <string name="landing_gym_trainer">Gym Trainer</string>
    <string name="landing_diet_plan">Diet Plan</string>
    <string name="landing_past_workouts">Past Workouts</string>
    <string name="landing_add_workouts">Add Workouts</string>
    <string name="settings_language">Language</string>
</resources>