<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_workouts_details"
        android:orderInCategory="101"
        android:title="@string/menu_workouts"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_edit_goals"
        android:orderInCategory="102"
        android:title="@string/menu_goals"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_language"
        android:orderInCategory="103"
        android:title="@string/settings_language"
        app:showAsAction="never" />

</menu>