<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3E5F5">

    <ImageView
        android:id="@+id/user_pic"
        android:layout_width="@dimen/profile_pic_dimen"
        android:layout_height="@dimen/profile_pic_dimen"
        android:padding="@dimen/padding_profile_pic"
        android:layout_margin="@dimen/user_profile_margin"
        android:contentDescription="@string/users_profile_pic"
        android:onClick="change_dp"
        android:src="@drawable/user_profile_pic"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/margin_small"
        android:padding="@dimen/user_profile_margin"
        android:layout_toRightOf="@+id/user_pic"
        android:layout_toEndOf="@+id/user_pic"

        android:text="@string/backdrop_subtitle"
        android:textColor="@color/blktext"
        android:inputType="text"
        android:gravity="center"/>

    <RelativeLayout
        android:id="@+id/user_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/user_profile_margin"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_corner_layout">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_fullname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:padding="@dimen/user_profile_margin"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp">
            <EditText
                android:id="@+id/user_fullname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:textColor="@color/wyttext"
                android:hint="@string/user_first_name"
                android:inputType="text"
                android:gravity="center"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_user_age"
            android:layout_width="@dimen/small_txt_input"
            android:layout_height="wrap_content"

            android:padding="@dimen/user_profile_margin"
            android:layout_below="@+id/edit_fullname">
            <EditText
                android:id="@+id/user_age"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:textColor="@color/wyttext"
                android:hint="@string/user_age"
                android:inputType="number"
                android:gravity="center"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="@dimen/small_txt_input"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_fullname"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="65dp"
            android:layout_marginStart="65dp"
            android:text="@string/male_gender"
            android:textColor="@color/wyttext"
            android:textSize="8pt"
            android:layout_toRightOf="@id/edit_user_age"
            android:layout_toEndOf="@id/edit_user_age" />

        <Switch
            android:id="@+id/edit_user_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="34dp"
            android:layout_marginLeft="120dp"
            android:layout_marginStart="120dp"

            android:padding="@dimen/user_profile_margin"
            android:layout_below="@+id/edit_fullname"
            android:layout_toRightOf="@id/edit_user_age"
            android:layout_toEndOf="@id/edit_user_age"/>

        <TextView
            android:layout_width="@dimen/small_txt_input"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_fullname"
            android:layout_marginTop="35dp"
            android:text="@string/female_gender"
            android:textColor="@color/btncolor"
            android:textSize="8pt"
            android:layout_toRightOf="@id/edit_user_gender"
            android:layout_toEndOf="@id/edit_user_gender" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_user_address"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="wrap_content"

            android:padding="@dimen/user_profile_margin"
            android:layout_below="@+id/edit_user_age">
            <EditText
                android:id="@+id/user_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:textColor="@color/wyttext"
                android:hint="@string/user_home_address"
                android:inputType="text"
                android:gravity="center"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/user_save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="@dimen/profile_pic_dimen"
            android:layout_below="@+id/edit_user_address"
            android:layout_marginStart="@dimen/profile_pic_dimen"

            android:text="@string/btn_user_save_details"
            android:textColor="@color/wyttext"/>

    </RelativeLayout>

</RelativeLayout>