<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/m_zito_main_page"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="5dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:background="@drawable/rounded_corner_layout"
        android:padding="@dimen/padding_small">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small">

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:drawableLeft="@drawable/username_login"
                android:drawableStart="@drawable/username_login"
                android:drawablePadding="5dp"

                android:singleLine="true"
                android:inputType="text"
                android:textColor="@color/wyttext"
                android:hint="@string/login_enter_your_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_margin="@dimen/margin_small">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:drawableLeft="@drawable/userpassword"
                android:drawableStart="@drawable/userpassword"

                android:drawableRight="@drawable/icon_hide_eye"
                android:drawableEnd="@drawable/icon_hide_eye"
                android:drawablePadding="5dp"

                android:inputType="textPassword"
                android:textColor="@color/wyttext"
                android:hint="@string/login_enter_your_password"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:textSize="@dimen/btn_txt"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_margin="10dp"
            android:textColor="@color/wyttext"/>

        <TextView
            android:id="@+id/to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="-10dp"
            android:layout_marginLeft="200dp"

            android:text="@string/already_signed"
            android:textSize="6pt"
            android:textColor="@color/wyttext"/>

    </LinearLayout>

</RelativeLayout>